<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dip"
	    android:text="@string/HttpUrlConnection"
	    android:id="@+id/bt"
	    />
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dip"
	    android:text="@string/parseWithPull"
	    android:id="@+id/bt2"
	    />
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dip"
	    android:text="@string/parseWithSax"
	    android:id="@+id/bt3"
	    />
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dip"
	    android:text="@string/parseWithJSONObject"
	    android:id="@+id/bt4"
	    />
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dip"
	    android:text="@string/parseWithGSON"
	    android:id="@+id/bt5"
	    />
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    >
	    <TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/tv"
	    android:layout_marginTop="12dp"
	    />
	</ScrollView>
	
</LinearLayout>
